--- a/Site/style.css
+++ b/Site/style.css
@@ -202,7 +202,7 @@ nav li, a{
 }
 .wrapper section{
     width: 1000px;
-    padding-top: 100px;
+    padding-top: 20px;
     min-height: 200px;
     background-color: #ffffff;
 }
@@ -468,6 +468,8 @@ padding-left: 25%;
 
 .section_4_2_content_1{
     width: 24%;
+    display: flex;
+    flex-wrap: wrap;
 }
 .section_4_2_content_2{
     width: 48%;
@@ -503,7 +505,8 @@ padding-left: 25%;
 }
 
 .section_4_2_content_1 img{
-    width: 100%;
+    width: 40%;
+    margin-right: -40px;
 }
 
 .section_4_2_content_2 img{
@@ -566,7 +569,7 @@ padding-left: 25%;
 
     .wrapper section{
         width: 100vw;
-        padding: 100px 20px 0 20px;
+        padding: 10px 20px 0 20px;
         min-height: 200px;
         background-color: #ffffff;
     }
@@ -686,5 +689,40 @@ padding-left: 25%;
 
     .section_4_1_title h1{
         font-size: 1.9em;
+    }
+
+    .section_4_2_content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .section_4_2_content div{
+        margin-bottom: 30px;
+    }
+
+    .section_4_2_content_1{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .section_4_2_content_2{
+        width: 100%;
+    }
+    .section_4_2_content_3{
+        width: 100%;
+    }
+
+    .section_4_2_content_1 img{
+        width: 40%;
+    }
+
+    .section_4_2_content_1 li{
+        font-size: 1em;
+        margin: 10px;
+    }
+    .section_4_2_content_3 li{
+        font-size: 1em;
+        margin: 0 0 10px 0;
     }
 }
