--- a/Site/style.css
+++ b/Site/style.css
@@ -34,6 +34,7 @@ nav li, a{
 .logo{
     cursor: pointer;
     height: 100%;
+    padding: 5px;
 }
 
 .nav_links{
@@ -68,13 +69,13 @@ nav li, a{
     left: 50%;
     transform: translate(-50%, -50%);
     overflow: hidden;
-    opacity: 0.55;
+    opacity: 0.3;
 }
 
 .section_0 .bg_color{
     position: absolute;
     z-index: -2;
-    background-color: #002e63;
+    background-color: #2f5597;
     width: 100%;
     height: 100%;
     overflow: hidden;
@@ -134,14 +135,15 @@ nav li, a{
 
 .download_containter
 {
-    background-color: #002e63d3;
+    background-color: #2f5597e5;
     display: flex;
     width: 70%;
     flex-direction: row;
     justify-content: space-between;
     align-items: center; 
     border-radius: 12px;
-    border: rgb(141, 141, 141) 2px solid;
+    box-shadow: 0 0 10px black;
+    /* border: rgb(0, 0, 0) 2px solid; */
     margin: 50px 0 15px 0;
 }
 
@@ -162,9 +164,10 @@ nav li, a{
 .check_game{
     width: 325px;
     height: 60px;
-    background-color: #002e63d3;
+    background-color: #2f5597e5;
     border-radius: 12px;
-    border: rgb(141, 141, 141) 2px solid;
+    box-shadow: 0 0 10px black;
+    /* border: rgb(0, 0, 0) 2px solid; */
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -177,9 +180,10 @@ nav li, a{
 .learn_more{
     height: 60px;
     padding: 0 15px 0 15px;
-    background-color: #002e63d3;
+    background-color: #2f5597e5;
     border-radius: 12px;
-    border: rgb(141, 141, 141) 2px solid;
+    box-shadow: 0 0 10px black;
+    /* border: rgb(0, 0, 0) 2px solid; */
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -199,16 +203,21 @@ nav li, a{
     justify-content: flex-start;
     align-items: center;
     font-family: 'Roboto', sans-serif;
+    background-color: #dce1f0;
 }
 .wrapper section{
     width: 1000px;
-    padding-top: 20px;
+    padding:20px;
+    margin-top: 20px;
     min-height: 200px;
-    background-color: #ffffff;
+    box-shadow: 0 0 20px #2f5597;
+    /* background-color: #ffffff; */
+    
 }
 
 .wrapper p{
     font-size: 1.2em;
+    line-height: 1.3em;
 }
 
 .wrapper h1{
@@ -259,11 +268,13 @@ nav li, a{
 }
 
 .section_1_1_content_boxes div div{
-    width: 90%;
+    width: 100%;
     height: 90%;
     margin: 0 0 20px 0;
     padding: 10px;
-    border: 2px solid black;
+    color: white;
+    background-color:#2f5597;;
+    box-shadow: 0 0 10px #2f5597;
 }
 .section_1_1_content_boxes_1_containter p{
     margin: 0px;
@@ -322,13 +333,26 @@ padding-left: 25%;
 }
 
 .section_1_2_content p{
+    width: 90%;
+}
+
+.section_1_2_content div:nth-child(odd)
+{
+    color: white;
+    padding: 10px;
+    background-color: #2f5597;
+    box-shadow: 0 0 10px #2f5597;
+}
+
+.section_1_2_content div:nth-child(odd) p
+{
     width: 70%;
 }
 
-.section_1_2_content_child2{
+.section_1_2_content_child2 p{
     margin: 0 0 0 auto;
-    padding: 30px 0 30px 0;
-    text-align: justify;
+    padding: 10px;
+    text-align: right;
 }
 
 .section_2_1_title h1{
@@ -388,11 +412,12 @@ padding-left: 25%;
 }
 
 .section_3_1_content_3 div{
-    background-color: #002e63;
+    background-color: #2f5597;
     color: white;
     padding:20px 30px;
     border-radius: 12px;
     font-weight: 400;
+    box-shadow: 0 0 10px #2f5597;
 }
 
 .section_3_1_content_3_1{
@@ -408,6 +433,8 @@ padding-left: 25%;
     width: 30%;
     margin: 5px 5px 5px 5px;
     padding-left: 50px !important;
+    display: flex;
+    align-items: center;
 }
 
 .section_3_1_content_3_3{
@@ -454,11 +481,6 @@ padding-left: 25%;
     display: inline;
     text-align: justify;
 } 
-
-.section_4_1_content_1 p:first-child{
-    font-size: 2em;
-    font-weight: 500;
-}
 
 .section_4_2_content {
     display: flex;
@@ -542,7 +564,6 @@ padding-left: 25%;
         padding: 20px 0 30px 0;
     }
     .download_containter{
-    background-color: #002e63d3;
     display: flex;
     width: 350px;
     flex-direction: column;
@@ -555,6 +576,7 @@ padding-left: 25%;
 
     .wrapper p{
         font-size: 1em;
+        line-height: 1.5em;
     }
     
     .wrapper h1{
@@ -569,9 +591,9 @@ padding-left: 25%;
 
     .wrapper section{
         width: 100vw;
-        padding: 10px 20px 0 20px;
         min-height: 200px;
-        background-color: #ffffff;
+        overflow: hidden;
+        /* background-color: #ffffff; */
     }
 
     .section_1_1_title{
@@ -625,8 +647,8 @@ padding-left: 25%;
     }
     .section_1_1_content_boxes div div{
         width: 100%;
+        height: 100%;
         max-width: 500px;
-        margin: 0 0 30px 0;
     }
 
     .section_1_1_timeline_svg{
@@ -639,6 +661,24 @@ padding-left: 25%;
     .timeline_horizontal{
         display: none;
     }
+
+    .section_1_2_content p{
+        width: 100% !important;
+    }
+    
+    .section_1_2_content div:nth-child(odd)
+    {
+        color: white;
+        padding: 10px;
+        background-color: #2f5597;
+    }
+    
+    .section_1_2_content_child2 p{
+        margin: 0 0 0 auto;
+        padding: 10px;
+        text-align: left;
+    }
+
     .section_3_1_content_3{
     display: flex;
     flex-direction: column;
@@ -714,7 +754,10 @@ padding-left: 25%;
     }
 
     .section_4_2_content_1 img{
-        width: 40%;
+        width: auto;
+        max-height: 250px;
+        margin-top: -50px;
+        margin-bottom: -20px;
     }
 
     .section_4_2_content_1 li{
