--- a/Site/style.css
+++ b/Site/style.css
@@ -21,7 +21,7 @@ html {
     align-items: center;
 }
 
-nav li, a{
+.header nav li, a{
     color: #ffffff;
     text-decoration: none;
     font-weight: 300;
@@ -550,6 +550,88 @@ nav li, a{
     width: 100%;
 }
 
+.popup .overlay{
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, .7);
+    z-index: 10;
+    display: none;
+    font-family: 'Roboto', sans-serif;
+}
+
+.popup .popup-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%) scale(0);
+    background-color: #dce1f0;
+    width: 900px;
+    height: auto;
+    z-index: 20;
+    padding: 30px;
+    text-align: left;
+    box-sizing: border-box;
+}
+
+.popup .close-btn{
+    cursor: pointer;
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    width: 30px;
+    height: 30px;
+    background-color: #222;
+    color: white;
+    font-size: 2em;
+    font-weight: 600;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+.popup.active .overlay{
+    display: block;
+}
+
+.popup.active .popup-content{
+    transition: all 100ms ease-in-out;
+    transform: translate(-50%,-50%) scale(1);
+}
+
+.popup #popup-title{
+    padding-bottom: 10px;
+    width: 100%;
+}
+
+.popup #popup-link{
+    text-decoration: none;
+    color: #4473c4;
+    font-weight: 400;
+    width: 100%;
+    text-align: left;
+}
+
+.popup #popup-link-p{
+    width: 100%;
+    text-align: left;
+}
+
+.popup #popup-content{
+    padding-top: 25px;
+    width: 100%;
+}
+
+.link-toogle{
+    cursor: pointer;
+    padding-right: 20px;
+    background-image: url('media/multi/arrow-link.svg');
+    background-repeat: no-repeat;
+    object-fit: fill;
+}
+
 @media screen and (max-width:1000px){
     .header{
         padding:5px;
@@ -783,5 +865,12 @@ nav li, a{
     .section_4_2_content_3 li{
         font-size: 1em;
         margin: 0 0 10px 0;
+    }
+    .popup .popup-content{
+        width: 100vw;
+    }
+
+    .popup #popup-link-p{
+        word-wrap: break-word;
     }
 }
