--- a/Site/style.css
+++ b/Site/style.css
@@ -413,12 +413,23 @@ html {
     padding-bottom: 30px;
 }
 .section_3_1_content_2 div{
-    width: 48%;
     justify-content: space-between;
 }
 
-.section_3_1_content_2 div p{
-    text-align: justify;
+.section_3_1_content_2_divider{
+    width: 2px;
+    background-color: #2f5597;
+    box-shadow: 0 0 10px #2f5597;
+}
+
+.section_3_1_content_2_1{
+    text-align: left;
+    width: 48%;
+}
+
+.section_3_1_content_2_2{
+    text-align: right;
+    width: 48%;
 }
 
 .section_3_1_content_3 div{
@@ -628,6 +639,7 @@ html {
     cursor: pointer;
     padding-right: 20px;
     background-image: url('media/multi/arrow-link.svg');
+    box-shadow: 0 0 2px#dce1f0;
     background-repeat: no-repeat;
     object-fit: fill;
 }
@@ -814,8 +826,20 @@ html {
         padding-bottom: 30px;
     }
     .section_3_1_content_2 div{
-        width: 600px;
         justify-content: space-between;
+    }
+
+    .section_3_1_content_2_1{
+        width: 100%;
+    }
+
+    .section_3_1_content_2_divider{
+        width: 100%;
+        height: 2px;
+    }
+
+    .section_3_1_content_2_2{
+        width: 100%;
     }
 
     .section_3_2_content_1_store
