--- a/Site/style.css
+++ b/Site/style.css
@@ -11,21 +11,35 @@ html {
 .header{
     z-index: 1;
     position: fixed;
-    width: 100%;
-    height: 60px;
-    margin:0;
-    padding: 0 50px 0 50px;
     background-color: #002e63;
+    width: 100%;
+    margin:0;
+}
+
+.header_mail
+{
+    font-family: 'Roboto', sans-serif;
+    background-color: #00428d;
+    height: auto;
+    width: 100%;
+    font-size: 15px;
+    color: white;
+}
+
+.header_container{
+    width: 100%;
+    padding: 0 50px 0 50px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 60px;
 }
 
 .header nav li, a{
     color: #ffffff;
     text-decoration: none;
     font-weight: 300;
-    font-size: 18px;
+    font-size: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     text-align: center;
@@ -217,7 +231,7 @@ html {
 }
 
 .wrapper p{
-    font-size: 1.2em;
+    font-size: 1.1em;
     line-height: 1.3em;
 }
 
@@ -561,6 +575,52 @@ html {
     width: 100%;
 }
 
+.section_5_1_content p:nth-child(2)
+{
+    margin-top: 30px;
+    font-size: 1.2em;
+    text-align: center;
+    color: #2f5597;
+    font-weight: 700;
+}
+
+.section_5_2_content{
+    margin-top: 20px;
+    color: white;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+.section_5_2_content div{
+    background-color:#2f5597;
+    box-shadow: 0 0 10px #2f5597;
+    padding: 10px;
+}
+
+.section_5_2_content div *:nth-child(2)
+{
+    background-color:#5b7197;
+}
+
+.section_5_2_content_1{
+    width: 20%;
+}
+
+.section_5_2_content_2{
+    width: 50%;
+}
+
+.section_5_2_content_2 ul{
+    margin-left: 20px;
+}
+
+.section_5_2_content_3{
+    width: 20%;
+}
+.section_5_2_content_3 ul{
+    list-style: none;
+    text-align: center;
+}
 .popup .overlay{
     position: fixed;
     top: 0px;
@@ -645,11 +705,22 @@ html {
 }
 
 @media screen and (max-width:1000px){
-    .header{
-        padding:5px;
+    .header_mail
+    {
+        font-family: 'Roboto', sans-serif;
+        background-color: #00428d;
+        height: auto;
+        width: 100%;
+        font-size: 12px;
+        color: white;
     }
+    
+    .header_container{
+        height: 48px;
+        padding: 0;
+    }
+
     .logo{
-        cursor: pointer;
         height: 100%;
         width: auto;
     }
@@ -684,17 +755,17 @@ html {
     }
 
     .wrapper p{
-        font-size: 1em;
+        font-size: 0.9em;
         line-height: 1.5em;
     }
     
     .wrapper h1{
-        font-size: 2.5em;
+        font-size: 2.4em;
         font-weight: 400;
     }
     
     .wrapper h4{
-        font-size: 1.7em;
+        font-size: 1.5em;
         font-weight: 400;
     }
 
