--- a/Site/style.css
+++ b/Site/style.css
@@ -224,6 +224,7 @@ html {
     width: 1000px;
     padding:20px;
     margin-top: 20px;
+    margin-bottom: 20px;
     min-height: 200px;
     box-shadow: 0 0 20px #2f5597;
     /* background-color: #ffffff; */
@@ -236,12 +237,12 @@ html {
 }
 
 .wrapper h1{
-    font-size: 3.5625em;
+    font-size: 2.8em;
     font-weight: 400;
 }
 
 .wrapper h4{
-    font-size: 2em;
+    font-size: 1.9em;
     font-weight: 400;
 }
 .section_1_1_title
@@ -299,14 +300,37 @@ html {
 }
 .section_1_1_content_boxes_1_containter ul {
     margin-left: 20px;
+    list-style: none;
+}
+
+.section_1_1_content_boxes_1_containter ul li{
+    position: relative;
+    margin-left: 5px;
+}
+
+.section_1_1_content_boxes_1_containter ul li:before {
+    content: '✓';
+    position: absolute;
+    margin-left: -18px;
 }
 
 .section_1_1_content_boxes_2_containter p{
-
     font-size: .95em;
 }
 .section_1_1_content_boxes_2_containter ul {
     margin-left: 20px;
+    list-style: none;
+}
+
+.section_1_1_content_boxes_2_containter ul li{
+    position: relative;
+    margin-left: 5px;
+}
+
+.section_1_1_content_boxes_2_containter ul li:before {
+    content: '✓';
+    position: absolute;
+    margin-left: -18px;
 }
 
 .section_1_1_timeline_svg_img{
@@ -357,7 +381,7 @@ html {
 }
 
 .section_1_2_content p{
-    width: 90%;
+    width: 85%;
 }
 
 .section_1_2_content div:nth-child(odd)
@@ -411,7 +435,6 @@ html {
 }
 
 .section_3_1_title h1{
-    font-size: 3.5em;
     text-align: center;
     padding-bottom: 30px;
     text-align: center;
@@ -438,11 +461,15 @@ html {
 }
 
 .section_3_1_content_2_1{
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: left;
     width: 48%;
 }
 
 .section_3_1_content_2_2{
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: right;
     width: 48%;
 }
@@ -468,10 +495,22 @@ html {
 .section_3_1_content_3_2{
     width: 30%;
     margin: 5px 5px 5px 5px;
-    padding-left: 50px !important;
     display: flex;
     align-items: center;
 }
+
+.section_3_1_content_3_2 ul li{
+    position: relative;
+    margin-left: 5px;
+    list-style: none;
+}
+
+.section_3_1_content_3_2 ul li:before {
+    content: '✓';
+    position: absolute;
+    margin-left: -18px;
+}
+
 
 .section_3_1_content_3_3{
     width: 30%;
@@ -480,6 +519,10 @@ html {
     align-items: center;
     justify-content: center;
     text-align: center;
+}
+
+.section_3_2{
+    margin-top: 35px;
 }
 
 .section_3_2_title h1, .section_3_2_title h4{
@@ -503,8 +546,6 @@ html {
 }
 
 .section_4_1_title h1{
-    font-size: 2.8em;
-    font-weight: 500;
     text-align: center;
 }
 
@@ -576,6 +617,10 @@ html {
     width: 100%;
 }
 
+.section_5_1_title{
+    text-align: center;
+}
+
 .section_5_1_content p:nth-child(2)
 {
     margin-top: 30px;
@@ -631,9 +676,18 @@ html {
     margin-left: 20px;
 }
 
-.section_5_2_content_2 li{
+.section_5_2_content_2 ul li{
     padding-top: 3px;
     padding-bottom: 4px;
+    position: relative;
+    margin-left: 5px;
+    list-style: none;
+}
+
+.section_5_2_content_2 ul li:before {
+    content: '✓';
+    position: absolute;
+    margin-left: -18px;
 }
 
 .section_5_2_content_3{
@@ -645,6 +699,28 @@ html {
     padding-top: 7px;
     padding-bottom: 7px;
 }
+
+#section_7 h1{
+    text-align: center;
+}
+
+.section_7_content{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.section_7_content_1{
+    font-size: 1.45em !important;
+}
+
+.section_7_content_4{
+    font-weight: 500;
+    font-size: 1.3em  !important;
+    color: #255fc5;
+}
+
 .popup .overlay{
     position: fixed;
     top: 0px;
@@ -722,8 +798,7 @@ html {
 .link-toogle{
     cursor: pointer;
     padding-right: 20px;
-    background-image: url('media/multi/arrow-link.svg');
-    box-shadow: 0 0 2px#dce1f0;
+    background-image: url('media/multi/arrow-link-white.svg');
     background-repeat: no-repeat;
     object-fit: fill;
 }
