--- a/Site/style.css
+++ b/Site/style.css
@@ -239,6 +239,7 @@ html {
 .wrapper h1{
     font-size: 2.8em;
     font-weight: 400;
+    margin-bottom: 20px;
 }
 
 .wrapper h4{
@@ -251,7 +252,7 @@ html {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 30px;
+    padding-bottom: 10px;
 }
 
 .section_1_1_title h1{
@@ -361,9 +362,13 @@ html {
     text-align: center;
     font-weight: 700;
     padding: 5px 10px;
-    background-color: #2f5597;
+    background-color: #002e63;
     color: white;
     box-shadow: 0 0 10px #2f5597;
+}
+
+.section_1_2{
+    margin-top: 20px;
 }
 
 .section_1_2_content{
@@ -597,7 +602,7 @@ html {
 }
 
 .section_4_2_content_3_1{
-    padding: 0 0 20px 0;
+    padding: 0 0 0 0;
 }
 .section_4_2_content_3 ul{
     margin-left: 10px;
