--- a/Site/style.css
+++ b/Site/style.css
@@ -23,6 +23,7 @@ html {
     height: auto;
     width: 100%;
     font-size: 15px;
+    padding: 3px;
     color: white;
 }
 
@@ -274,6 +275,7 @@ html {
 
 .section_1_1_content_title p{
     padding: 0 0 0 40px;
+    text-align: center;
 }
 .section_1_1_content_boxes{
     display: flex;
@@ -560,8 +562,7 @@ html {
 }
 
 .section_4_1_content_1 p{
-    display: inline;
-    text-align: justify;
+    text-align: center;
 } 
 
 .section_4_2_content {
@@ -625,6 +626,11 @@ html {
 .section_5_1_title{
     text-align: center;
 }
+
+.section_5_1_content p:nth-child(1){
+    text-align: center;
+}
+
 
 .section_5_1_content p:nth-child(2)
 {
