--- a/Site/style.css
+++ b/Site/style.css
@@ -566,15 +566,27 @@ html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    position: relative;
+    padding-top: 20px;
 }
 
 .section_3_2_content_1_icon img{
     text-align: center;
     width: 100%;
+    max-width: 300px;
+    z-index: -1;
+    border-radius: 15px;
+    box-shadow: 0 5px 10px #2f5597;
 }
 
 .section_3_2_content_1_store_button{
     width: 100%;
+    max-width: 300px;
+    position: absolute;
+    top:80%;
+    left:50%;
+    transform:translate(-50%,-50%);
+
 }
 
 .section_4_1_title h1{
@@ -937,15 +949,31 @@ html {
         text-align: center;
         padding: 20px 0 30px 0;
     }
+
     .download_containter{
-    display: flex;
-    width: 350px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center; 
+        display: flex;
+        width: 100%;
+        max-width: 350px;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center; 
     }
     .download_text{
-        padding:10px 0 20px 0;
+        padding:10px 0 5px 0;
+    }
+
+    .download_button{
+        margin: 0;
+        max-width: 250px;
+        width: 100%;
+    }
+
+    .check_game{
+        width: 100%;
+        max-width: 325px;
+        height: auto;
+        padding-top: 10px;
+        padding-bottom: 10px;
     }
 
     .wrapper p{
@@ -983,7 +1011,7 @@ html {
 
     .section_1_1_title h1{
         width: 100%;
-        text-align: left;
+        text-align: center;
         line-height: .9em;
     }
     
@@ -994,6 +1022,7 @@ html {
     .section_1_1_title h4{
         width: 100%;
         line-height: 1.5em;
+        text-align: center;
     }
 
     .section_1_1_content_timeline {
@@ -1015,7 +1044,7 @@ html {
         align-items:center;
         justify-content:right;
         width: 100%;
-        max-width: 500px;
+        max-width: 505px;
         padding:10px 10px 0 10px;
         margin:0;
     }
@@ -1023,6 +1052,11 @@ html {
         width: 100%;
         height: auto;
         max-width: 500px;
+    }
+
+    .section_1_1_content_boxes_3_containter{
+        max-width: 300px !important;
+        width: 100%;
     }
 
     .section_1_1_timeline_svg{
@@ -1111,7 +1145,7 @@ html {
     .section_3_2_content_1_store
     {
         max-width: 600px;
-        width: 100vw;
+        width: 100%;
     }
 
     .section_4_1_title h1{
