--- a/Site/style.css
+++ b/Site/style.css
@@ -72,7 +72,7 @@ html {
 .section_0{
     position: relative;
     overflow: hidden;
-    padding-top: 60px;
+    padding-top: 80px;
 }
 
 .section_0 video{
@@ -124,11 +124,12 @@ html {
 }
 
 .section_0 .text_wrap .centered h4{
-    font-size: 61px;
+    font-size: 58px;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
     padding: 40px 0 50px 0;
     text-shadow: 2px 2px 10px black;
+    text-align: center;
 }
 
 .inner_margin{
@@ -611,7 +612,9 @@ html {
 .section_4_2_content_1{
     width: 24%;
     display: flex;
-    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
 }
 .section_4_2_content_2{
     width: 48%;
@@ -620,9 +623,14 @@ html {
     width: 26%;
 }
 
+.section_4_2_content_1_container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .section_4_2_content_1 ul{
     margin-left: 10px;
-    margin-bottom: 20px;
 }
 
 .section_4_2_content_1 li{
@@ -653,6 +661,7 @@ html {
 
 .section_4_2_content_1 img{
     width: 30%;
+    max-height: 200px;
     margin-right: -25px;
 }
 
@@ -694,6 +703,7 @@ html {
 .section_4_3_content_cotainter div img{
     max-width: 100%;
     max-height: 200px;
+    border-radius: 10px;
 }
 
 .section_4_3_content_cotainter div:nth-child(2n+1)
@@ -935,6 +945,11 @@ html {
         max-width: none;
         max-height: none;
     }
+
+    .section_0{
+        padding-top: 50px;
+    }
+
     .section_0 .text_wrap .centered{
         width: 100vw;
         min-height: 800px;
@@ -946,7 +961,7 @@ html {
     }
     .section_0 .text_wrap .centered h4{
         font-size: 2em;
-        text-align: center;
+        text-align: center !important;
         padding: 20px 0 30px 0;
     }
 
@@ -1022,7 +1037,6 @@ html {
     .section_1_1_title h4{
         width: 100%;
         line-height: 1.5em;
-        text-align: center;
     }
 
     .section_1_1_content_timeline {
@@ -1158,37 +1172,43 @@ html {
         justify-content: space-between;
         align-items: center;
     }
-    .section_4_2_content div{
-        margin-bottom: 30px;
+    
+    .section_4_2_content>div{
+        margin-bottom: 40px;
     }
 
     .section_4_2_content_1{
         width: 100%;
+        max-width: 300px;
         display: flex;
         flex-wrap: wrap;
     }
     .section_4_2_content_2{
         width: 100%;
+        max-width: 600px;
     }
     .section_4_2_content_3{
         width: 100%;
-    }
-
-    .section_4_2_content_1 img{
-        width: auto;
-        max-height: 250px;
-        margin-top: -50px;
-        margin-right: -40px;
-        margin-bottom: -20px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        max-width: 320px;
     }
 
     .section_4_2_content_1 li{
         font-size: 1em;
         margin: 10px;
     }
+
+    .section_4_2_content_3 ul{
+        margin-top: 10px;
+        padding-left: 15px;
+    }
+
     .section_4_2_content_3 li{
         font-size: 1em;
-        margin: 0 0 10px 0;
+        margin: 0 0 5px 0;
     }
 
     .section_5_2_content{
