--- a/Site/style.css
+++ b/Site/style.css
@@ -163,7 +163,7 @@ a{
     justify-content: center;
     align-items: center; 
     width: 1000px;
-    height: 800px;
+    min-height: 800px;
     color: white;
 }
 
